--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,75 +1,48 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<title>Registration Form</title>
+<title>Sign In</title>
+<link rel="stylesheet" href="style.css">
+<style>
+h3 {
+	text-align: center;
+}
 
-
-
+.container {
+	width: 40%;
+	border: 1px solid black;
+	margin: auto;
+	padding: 25px;
+	text-align: center;
+}
+</style>
 </head>
 <body>
+	<div class="container">
+		<h3>Sign In</h3>
 
-	<h3>Registration Form</h3>
-	<table>
-		<tr>
-			<td>
-				<form  onsubmit="onFormSubmit()" autocomplete="off">
-					<div>
-						<label>id</label> <input type="number" name="id" id="id">
-					</div>
-					<div>
-						<label>name</label> <input type="text" name="name" id="name">
-					</div>
-					<div>
-						<label>email</label> <input type="email" name="email" id="email">
-					</div>
-					<div>
-						<label>password</label> <input type="password" name="password"
-							id="password">
-					</div>
-					<div>
-						<label>address</label> <input type="text" name="address"
-							id="address">
-					</div>
+		<form onsubmit="signIn()" autocomplete="off">
+			<div>
+				<label>Email</label> <input type="text" name="email" id="email">
+			</div>
+			<br>
 
-					<div>
-						<input type="radio" name="gender" value="Male" id='gender'>Male
-						&nbsp; &nbsp; <input type="radio" name="gender" value="Female"
-							id='gender'>Female
-					</div>
+			<div>
+				<label>Password</label> <input type="password" name="password"
+					id="password">
+			</div>
+			<br>
 
-					<div class="form-action-buttons">
-						<input type="submit" value="Submit">
-					</div>
-				</form>
-				<button onclick="viewStudent()">View</button>
+			<div class="form-action-buttons">
+				<input type="submit" value="SignIn">
+			</div>
+		</form>
+		<div>
+			<button onclick="SignUp()" id="signUp">SignUp</button>
+		</div>
 
-			</td>
+	</div>
 
-
-			<td>
-				<table class="list" id="studentList" border="1">
-					<thead>
-						<tr>
-							<th>Id</th>
-							<th>Name</th>
-							<th>Email</th>
-							<th>Password</th>
-							<th>Address</th>
-							<th>Gender</th>
-							<th>Edit</th>
-						</tr>
-					</thead>
-					<tbody>
-
-					</tbody>
-				</table>
-			</td>
-		</tr>
-	</table>
 	<script src="index.js"></script>
 </body>
-
 </html>
-
-<!--  <a href="index1.html">View Student</a>  -->
