--- a/src/main/webapp/index3.html
+++ b/src/main/webapp/index3.html
@@ -3,54 +3,86 @@
 <head>
 <title>Registration Form</title>
 <link rel="stylesheet" href="style.css">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script
+    src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-h3 {
+h2 {
 	text-align: center;
 }
 
-.container {
+/* .container {
+    height: 400px;
 	width: 40%;
-	border: 1px solid black;
+	border: 2px solid black;
 	margin: auto;
-	padding: 25px;
+	padding: 25px 0px 25px 25px;
 	text-align: center;
+	
+} */
+
+body {
+	  background-image: url("https://img.freepik.com/premium-photo/scientific-molecule-background-with-flow-waves-medicine-science-technology-chemistry-wallpaper-o_230610-906.jpg?w=996");
 }
+
+#div1 {
+    width: 600px;
+    height: 400px;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
+    border: 1px;
+}
+
 </style>
 </head>
 <body>
-	<div class="container">
-		<h3>Registration Form</h3>
-		<table>
+	<div class="container" id="div1">
+	   <h3 class="card-header text-center text-light bg-danger">Registration
+            Form</h3>
+		<table class="table table-hover table-striped" >
 			<tr>
 				<td>
 					<form onsubmit="onFormSubmit()" autocomplete="off">
 						<br>
 
 						<div>
-							<label>Name:</label> <input type="text" name="name" id="name"
-								pattern="[A-Za-z ]{3,15}" title="Name must be the letter only">
+							<label>Name:</label> <input type="text" name="name" id="name" 
+								pattern="[A-Za-z ]{3,15}" title="Name must be the letter only" required="required" style="text-align: center;" >
 						</div>
 						<br>
 
 						<div>
-							<label>Email:</label> <input name="email" id="email"
+							<label>Email:</label> <input name="email" id="email" required="required"
 								pattern="^[\w]{1,}[\w.]{0,}@[\w]{2,}([.][a-zA-Z]{2,}|[.][a-zA-Z]{2,})"
-								title="Invalid Email Address">
+								title="Invalid Email Address" style="text-align: center;" >
 						</div>
 						<br>
 
 						<div>
-							<label>Password:</label> <input type="password" name="password"
+							<label>Password:</label> <input type="password" name="password" required="required"
 								id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
 								title="Password must has at least 8 characters that include at least 1 lowercase,
-								 uppercase and special character">
+								 uppercase and special character" style="text-align: center;" >
 						</div>
 						<br>
 
 						<div>
 							<label>Address:</label> <input type="text" name="address"
-								id="address" pattern="[A-Za-z ]{3,15}"
-								title="Address must be the letter only">
+								id="address" pattern="[A-Za-z ]{3,15}" required="required"
+								title="Address must be the letter only" style="text-align: center;" >
 						</div>
 						<br>
 
@@ -63,19 +95,19 @@ h3 {
 
 						<div>
 							<label>PhoneNo:</label> <input type="text" name="phoneNo"
-								id="phoneNo" pattern="[0-9]{10}"
-								title="PhoneNo must be the digit and 10 number are valid">
+								id="phoneNo" pattern="[0-9]{10}" required="required"
+								title="PhoneNo must be the digit and 10 number are valid" style="text-align: center;" >
 						</div>
 						<br>
 
 						<div>
-							<label>DeptartmentId</label> 
-							<input type="number" name="dept_id" id="dept_id">
+							<label>DeptName:</label> <input type="text"
+							 name="deptName" id="deptName" required="required" style="text-align: center;" >
 						</div>
 						<br>
 
-						<div class="form-action-buttons">
-							<input type="submit" value="Submit">
+						  <div class="form-action-buttons" style="text-align: center;" >
+							<input type="submit" value="Submit" class="btn btn-outline-success">
 						</div>
 					</form>
 				</td>
