--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,46 +1,94 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <title>Sign In</title>
 <link rel="stylesheet" href="style.css">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script
+    src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-h3 {
+  
+h1
+ {
 	text-align: center;
 }
 
-.container {
-	width: 40%;
-	border: 1px solid black;
+.container
+ {
+	height: 400px;
+    width: 45%;
+	border: 2px solid black;
 	margin: auto;
-	padding: 25px;
+	padding: 30px;
 	text-align: center;
 }
+
+body {
+	  background-image: url("https://img.freepik.com/premium-photo/scientific-molecule-background-with-flow-waves-medicine-science-technology-chemistry-wallpaper-o_230610-906.jpg?w=996");
+}
+
+.space {
+  width: 2px;
+  height: auto;
+  display: inline-block;
+}
+
+#emailValidate{
+    height: 7px; 
+    font-size: 12px;
+    color: red;
+    text-align: center;
+}
+
 </style>
 </head>
-<body>
+<body class="container-fluid">
 	<div class="container">
-		<h3>Sign In</h3>
+		<h2>Sign In</h2>
 
 		<form onsubmit="signIn()" autocomplete="off">
 			<div>
-				<label>Email</label> <input type="text" name="email" id="email">
+				<label>UserName</label> <input type="text" name="email" id="email"
+				placeholder="Enter Registered Email Id"
+				pattern="^[\w]{1,}[\w.]{0,}@[\w]{2,}([.][a-zA-Z]{2,}|[.][a-zA-Z]{2,})"
+				title="Email Does Not Match" size="25" style="margin-left: 7px" required="required" >
 			</div>
-			<br>
+			<br/>
 
 			<div>
 				<label>Password</label> <input type="password" name="password"
-					id="password">
+				    placeholder="Enter your Password"
+					id="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+					title="Password Does Not Match" size="25" style="margin-left: 10px" required="required" >
 			</div>
-			<br>
-
+			
+			<div id="emailValidate">
+			</div> 
+			<br/>
+			
 			<div class="form-action-buttons">
-				<input type="submit" value="SignIn">
+				<input type="submit" value="SignIn" class="btn btn-outline-success">
 			</div>
 		</form>
-		<div>
-			<button onclick="SignUp()" id="signUp">SignUp</button>
+		
+		 <div class="space">
+        </div>
+		<div  class="form-action-buttons">
+			<button onclick="SignUp()" id="signUp" class="btn btn-outline-success">SignUp</button>
 		</div>
-
 	</div>
 
 	<script src="index.js"></script>
